language/move-lang/tests/move_check/typing/abort_any_type.exp
error: 

   ┌── tests/move_check/typing/abort_any_type.move:5:13 ───
   │
 5 │         0 + (abort 0);
   │             ^^^^^^^^^ Invalid use of a divergent expression. The code following the evaluation of this expression will be dead and should be removed. In some cases, this is necessary to prevent unused resource values.
   │

error: 

   ┌── tests/move_check/typing/abort_any_type.move:9:13 ───
   │
 9 │         foo(abort 0);
   │             ^^^^^^^ Invalid use of a divergent expression. The code following the evaluation of this expression will be dead and should be removed. In some cases, this is necessary to prevent unused resource values.
   │

